--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ cache:
   directories:
   - $HOME/.m2
 
-install:
+env:
+  - DOCKER_IMAGE=ejmric/orders
+
+script:
   - mvn clean package -U
   - docker build -t "$DOCKER_IMAGE" .
 
 after_success:
-    - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-    - docker push "$DOCKER_IMAGE"
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker push "$DOCKER_IMAGE"
