--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -4,19 +4,16 @@ kumuluzee:
     name: dev
   version: 1.0.0
   server:
-    base-url: http://localhost:8080
+    base-url: http://localhost:8081
     http:
-      port: 8080
+      port: 8081
   datasources:
     - jndi-name: jdbc/OrdersDS
-      connection-url: jdbc:postgresql://192.168.99.100:5432/order
+      connection-url: jdbc:postgresql://127.0.0.1:5433/order
       username: dbuser
       password: postgres
       max-pool-size: 20
-  config:
+  discovery:
     etcd:
-      hosts: http://localhost:2379
-rest-properties:
-  external-services:
-    order-service:
-      enabled: true
+      hosts: http://192.168.99.100:2379
+
