--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>si.fri.rso.samples</groupId>
+    <groupId>rso.project</groupId>
     <artifactId>orders</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -75,17 +75,17 @@
             </dependency>
 
             <dependency>
-                <groupId>si.fri.rso.samples</groupId>
+                <groupId>rso.project</groupId>
                 <artifactId>orders-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>si.fri.rso.samples</groupId>
+                <groupId>rso.project</groupId>
                 <artifactId>orders-models</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>si.fri.rso.samples</groupId>
+                <groupId>rso.project</groupId>
                 <artifactId>orders-services</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
