--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -16,4 +16,10 @@ kumuluzee:
   discovery:
     etcd:
       hosts: http://192.168.99.100:2379
+  health:
+      checks:
+        data-source-health-check:
+          jndi-name: jdbc/OrdersDS
+  rest-properties:
+  healthy: true
 
