--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <kumuluzee.version>2.4.1</kumuluzee.version>
         <kumuluzee-rest.version>1.1.0</kumuluzee-rest.version>
         <kumuluzee-discovery.version>1.1.0-SNAPSHOT</kumuluzee-discovery.version>
-
+        <kumuluzee-health.version>1.0.0-SNAPSHOT</kumuluzee-health.version>
         <postgresql.version>42.1.4</postgresql.version>
     </properties>
 
@@ -67,7 +67,11 @@
                 <artifactId>kumuluzee-discovery-etcd</artifactId>
                 <version>${kumuluzee-discovery.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.kumuluz.ee.health</groupId>
+                <artifactId>kumuluzee-health</artifactId>
+                <version>${kumuluzee-health.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
