--- a/kubernetes/order-deployment.yaml
+++ b/kubernetes/order-deployment.yaml
@@ -10,7 +10,7 @@ spec:
         app: order
     spec:
       containers:
-      - image: ejmric/orders:0.06
+      - image: ejmric/orders:0.07
         name: orders
         env:
           - name: KUMULUZEE_DISCOVERY_CLUSTER
@@ -23,6 +23,12 @@ spec:
             value: jdbc:postgresql://postgres-orders:5432/order
           - name: KUMULUZEE_SERVER_BASEURL
             value: http://169.51.20.134:32564
+        livenessProbe:
+            httpGet:
+                path: /health
+                port: server
+            initialDelaySeconds: 10
+            periodSeconds: 3
         ports:
         - containerPort: 8081
           name: server
