--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
   - $HOME/.m2
 
 env:
-  - DOCKER_IMAGE=ejmric/orders:health
+  - DOCKER_IMAGE=ejmric/orders:health1
 
 script:
   - mvn clean package -U
