travis change, health2

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -16,7 +16,11 @@
             <groupId>rso.project</groupId>
             <artifactId>orders-models</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20171018</version>
+        </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-cdi-weld</artifactId>
