--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,6 +41,10 @@
             <groupId>com.kumuluz.ee.cors</groupId>
             <artifactId>kumuluzee-cors</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
