--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ cache:
   - $HOME/.m2
 
 env:
-  - DOCKER_IMAGE=ejmric/orders:metrics
+  - DOCKER_IMAGE=ejmric/orders:healthJSON
 
 script:
   - mvn clean package -U
   - docker build -t "$DOCKER_IMAGE" .
-
+s
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker push "$DOCKER_IMAGE"
