--- a/services/pom.xml
+++ b/services/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.fault.tolerance</groupId>
+            <artifactId>kumuluzee-fault-tolerance-hystrix</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
