--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
   - $HOME/.m2
 
 env:
-  - DOCKER_IMAGE=ejmric/orders:serviceDisc1
+  - DOCKER_IMAGE=amela/orders:test
 
 script:
   - mvn clean package -U
