etcd ip changed

--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -15,10 +15,10 @@ kumuluzee:
       max-pool-size: 20
   config:
       etcd:
-        hosts: http://192.168.99.100:2379
+        hosts: 169.51.20.118:30451
   discovery:
     etcd:
-      hosts: http://192.168.99.100:2379
+      hosts: 169.51.20.118:30451
   health:
       checks:
         data-source-health-check:
